Changed thumbnails to figure tag rather than div and added figcaptions.

--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
 				</ul>
 
 				<ul class="nav navbar-nav navbar-right">
-					<li><a href="#">Cart</a></li>
-					<li><a href="#">Log In</a></li>
+					<li><a href="#"><strike>Cart</strike></a></li>
+					<li><a href="#"><strike>Log In</strike></a></li>
 				</ul>
 			</div>
 		</div>
@@ -102,63 +102,54 @@
 
 			<div class="row">
 				<!-- First Column -->
-				<div class='col-md-4' id="links">
+				<div class='col-md-4'>
 					<h3>Charcoal</h3>
-					<a href="img/image1.jpg" title="image1" data-gallery>
-						<div class="thumbnail">
-							<img src="img/image1.jpg" alt="image1">
-						</div>
-					</a>
-					<a href="img/image2.jpg" title="image2" data-gallery>
-						<div class="thumbnail">
-							<img src="img/image2.jpg" alt="image2">
-						</div>
-					</a>
-					<a href="img/image3.jpg" title="image3" data-gallery>
-						<div class="thumbnail">
-							<img src="img/image3.jpg" alt="image3">
-						</div>
-					</a>
+					<figure class="thumbnail">
+						<a href="img/image1.jpg" title="image1" data-gallery><img src="img/image1.jpg" alt="image1"></a>
+						<figcaption>Image 1<br>$100</figcaption>
+					</figure>
+					<figure class="thumbnail">
+						<a href="img/image2.jpg" title="image2" data-gallery><img src="img/image2.jpg" alt="image2"></a>
+						<figcaption>Image 2<br>$100</figcaption>
+					</figure>
+					<figure class="thumbnail">
+						<a href="img/image3.jpg" title="image3" data-gallery><img src="img/image3.jpg" alt="image3"></a>
+						<figcaption>Image 3<br>$100</figcaption>
+					</figure>
 				</div>
 
 				<!-- Second Column -->
-				<div class='col-md-4' id="links">
-					<h3>Pastel</h3>
-					<a href="img/image4.jpg" title="image4" data-gallery>
-						<div class="thumbnail">
-							<img src="img/image4.jpg" alt="image4">
-						</div>
-					</a>
-					<a href="img/image5.jpg" title="image5" data-gallery>
-						<div class="thumbnail">
-							<img src="img/image5.jpg" alt="image5">
-						</div>
-					</a>
-					<a href="img/image6.jpg" title="image6" data-gallery>
-						<div class="thumbnail">
-							<img src="img/image6.jpg" alt="image6">
-						</div>
-					</a>
+				<div class='col-md-4'>
+					<h3>Pastel</h3>					
+					<figure class="thumbnail">
+						<a href="img/image4.jpg" title="image4" data-gallery><img src="img/image4.jpg" alt="image4"></a>
+						<figcaption>Image 4<br>$100</figcaption>
+					</figure>
+					<figure class="thumbnail">
+						<a href="img/image5.jpg" title="image5" data-gallery><img src="img/image5.jpg" alt="image5"></a>
+						<figcaption>Image 5<br>$100</figcaption>
+					</figure>
+					<figure class="thumbnail">
+						<a href="img/image6.jpg" title="image6" data-gallery><img src="img/image6.jpg" alt="image6"></a>
+						<figcaption>Image 6<br>$100</figcaption>
+					</figure>
 				</div>
 
 				<!-- Third Column -->
-				<div class='col-md-4' id="links">
-					<h3>Other</h3>
-					<a href="img/image7.jpg" title="image7" data-gallery>
-						<div class="thumbnail">
-							<img src="img/image7.jpg" alt="image7">
-						</div>
-					</a>
-					<a href="img/image8.jpg" title="image8" data-gallery>
-						<div class="thumbnail">
-							<img src="img/image8.jpg" alt="image8">
-						</div>
-					</a>
-					<a href="img/image9.jpg" title="image9" data-gallery>
-						<div class="thumbnail">
-							<img src="img/image9.jpg" alt="image9">
-						</div>
-					</a>
+				<div class='col-md-4'>
+					<h3>Other</h3>					
+					<figure class="thumbnail">
+						<a href="img/image7.jpg" title="image7" data-gallery><img src="img/image7.jpg" alt="image7"></a>
+						<figcaption>Image 7<br>$100</figcaption>
+					</figure>
+					<figure class="thumbnail">
+						<a href="img/image8.jpg" title="image8" data-gallery><img src="img/image8.jpg" alt="image8"></a>
+						<figcaption>Image 8<br>$100</figcaption>
+					</figure>
+					<figure class="thumbnail">
+						<a href="img/image9.jpg" title="image9" data-gallery><img src="img/image9.jpg" alt="image9"></a>
+						<figcaption>Image 9<br>$100</figcaption>
+					</figure>
 				</div>
 
 			</div>
