--- a/index.html
+++ b/index.html
@@ -39,13 +39,13 @@
 					<li><a href="#">Home</a></li>
 					<li><a href="#work">Work</a></li>
 					<li><a href="#about">About</a></li>
-					<li><a href="mailto:emeldir@gmail.com">Contact</a></li>
+					<li><a href="mailto:emeldir@gmail.com"><img src="img/email-icon.png" width="20" height="20" alt="Email Kelly"></a></li>
 				</ul>
 
-				<ul class="nav navbar-nav navbar-right">
+<!-- 				<ul class="nav navbar-nav navbar-right">
 					<li><a href="#"><strike>Cart</strike></a></li>
 					<li><a href="#"><strike>Log In</strike></a></li>
-				</ul>
+				</ul> -->
 			</div>
 		</div>
 	</div>
@@ -106,15 +106,15 @@
 					<h3>Charcoal</h3>
 					<figure class="thumbnail">
 						<a href="img/image1.jpg" title="image1" data-gallery><img src="img/image1.jpg" alt="image1"></a>
-						<figcaption>Image 1<br>$100</figcaption>
+						<figcaption>Image 1</figcaption>
 					</figure>
 					<figure class="thumbnail">
-						<a href="img/image2.jpg" title="image2" data-gallery><img src="img/image2.jpg" alt="image2"></a>
-						<figcaption>Image 2<br>$100</figcaption>
+						<a href="img/image2.png" title="image2" data-gallery><img src="img/image2.png" alt="image2"></a>
+						<figcaption>Image 2</figcaption>
 					</figure>
 					<figure class="thumbnail">
-						<a href="img/image3.jpg" title="image3" data-gallery><img src="img/image3.jpg" alt="image3"></a>
-						<figcaption>Image 3<br>$100</figcaption>
+						<a href="img/image3.png" title="image3" data-gallery><img src="img/image3.png" alt="image3"></a>
+						<figcaption>Image 3</figcaption>
 					</figure>
 				</div>
 
@@ -123,15 +123,15 @@
 					<h3>Pastel</h3>					
 					<figure class="thumbnail">
 						<a href="img/image4.jpg" title="image4" data-gallery><img src="img/image4.jpg" alt="image4"></a>
-						<figcaption>Image 4<br>$100</figcaption>
+						<figcaption>Image 4</figcaption>
 					</figure>
 					<figure class="thumbnail">
 						<a href="img/image5.jpg" title="image5" data-gallery><img src="img/image5.jpg" alt="image5"></a>
-						<figcaption>Image 5<br>$100</figcaption>
+						<figcaption>Image 5</figcaption>
 					</figure>
 					<figure class="thumbnail">
-						<a href="img/image6.jpg" title="image6" data-gallery><img src="img/image6.jpg" alt="image6"></a>
-						<figcaption>Image 6<br>$100</figcaption>
+						<a href="img/image6.png" title="image6" data-gallery><img src="img/image6.png" alt="image6"></a>
+						<figcaption>Image 6</figcaption>
 					</figure>
 				</div>
 
@@ -140,15 +140,15 @@
 					<h3>Other</h3>					
 					<figure class="thumbnail">
 						<a href="img/image7.jpg" title="image7" data-gallery><img src="img/image7.jpg" alt="image7"></a>
-						<figcaption>Image 7<br>$100</figcaption>
+						<figcaption>Image 7</figcaption>
 					</figure>
 					<figure class="thumbnail">
-						<a href="img/image8.jpg" title="image8" data-gallery><img src="img/image8.jpg" alt="image8"></a>
-						<figcaption>Image 8<br>$100</figcaption>
+						<a href="img/image8.png" title="image8" data-gallery><img src="img/image8.png" alt="image8"></a>
+						<figcaption>Image 8</figcaption>
 					</figure>
 					<figure class="thumbnail">
-						<a href="img/image9.jpg" title="image9" data-gallery><img src="img/image9.jpg" alt="image9"></a>
-						<figcaption>Image 9<br>$100</figcaption>
+						<a href="img/image9.png" title="image9" data-gallery><img src="img/image9.png" alt="image9"></a>
+						<figcaption>Image 9</figcaption>
 					</figure>
 				</div>
 
