changed case on email icon image file so it wouldn't be broken.

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 					<li><a href="#">Home</a></li>
 					<li><a href="#work">Work</a></li>
 					<li><a href="#about">About</a></li>
-					<li><a href="mailto:emeldir@gmail.com"><img src="img/email-icon.png" width="20" height="20" alt="Email Kelly"></a></li>
+					<li><a href="mailto:emeldir@gmail.com"><img src="img/Email-icon.png" width="20" height="20" alt="Email Kelly"></a></li>
 				</ul>
 
 <!-- 				<ul class="nav navbar-nav navbar-right">
@@ -168,7 +168,7 @@
 	<footer>
 		<div class="Contact">
 			<div class="container">
-				<a href="mailto:emeldir@gmail.com"><img src="img/email-icon.png"></a>
+				<a href="mailto:emeldir@gmail.com"><img src="img/Email-icon.png"></a>
 			</div>
 		</div>
 		<div>
