--- a/index.html
+++ b/index.html
@@ -39,13 +39,13 @@
 					<li><a href="#">Home</a></li>
 					<li><a href="#work">Work</a></li>
 					<li><a href="#about">About</a></li>
-					<li><a href="mailto:emeldir@gmail.com"><img src="img/envelope.png" width="20" height="20" alt="Email Kelly"></a></li>
 				</ul>
 
-<!-- 				<ul class="nav navbar-nav navbar-right">
-					<li><a href="#"><strike>Cart</strike></a></li>
-					<li><a href="#"><strike>Log In</strike></a></li>
-				</ul> -->
+ 				<ul class="nav navbar-nav navbar-right">
+					<li><a href="mailto:emeldir@gmail.com"><img src="img/envelope.png" width="20" height="20" alt="Email Kelly"></a></li>
+<!-- 					<li><a href="#"><strike>Cart</strike></a></li>
+					<li><a href="#"><strike>Log In</strike></a></li> -->
+				</ul>
 			</div>
 		</div>
 	</div>
@@ -89,7 +89,7 @@
 		<div class="container">
 			<div class="text-plate">
 				<h1>Kelly Sealy's Art Portfolio</h1>
-				<p>A collection of painting and drawings created in Portland, Oregon.</p>
+				<p>A collection of painting and drawings created by Kelly Sealy, an artist living in Portland, Oregon.</p>
 			</div>
 			<div id="workButton" class="button">View Work</div>
 		</div>
@@ -103,7 +103,7 @@
 			<div class="row">
 				<!-- First Column -->
 				<div class='col-md-4'>
-					<h3>Charcoal</h3>
+					<h3>Painting</h3>
 					<figure class="thumbnail">
 						<a href="img/image1.jpg" title="image1" data-gallery><img src="img/image1.jpg" alt="image1"></a>
 						<figcaption>Image 1</figcaption>
@@ -120,7 +120,7 @@
 
 				<!-- Second Column -->
 				<div class='col-md-4'>
-					<h3>Pastel</h3>					
+					<h3>Drawing</h3>
 					<figure class="thumbnail">
 						<a href="img/image4.jpg" title="image4" data-gallery><img src="img/image4.jpg" alt="image4"></a>
 						<figcaption>Image 4</figcaption>
@@ -137,7 +137,7 @@
 
 				<!-- Third Column -->
 				<div class='col-md-4'>
-					<h3>Other</h3>					
+					<h3>Scratchboard</h3>
 					<figure class="thumbnail">
 						<a href="img/image7.jpg" title="image7" data-gallery><img src="img/image7.jpg" alt="image7"></a>
 						<figcaption>Image 7</figcaption>
@@ -159,9 +159,7 @@
 	<div id="about" class="About">
 		<div class="container">
 			<h4>About Kelly:</h4>
-			<p>Here is a blurb about Kelly.
-				<br>Likely more than one line.
-				<br>Three is good for now.</p>
+			<p>Coming soon!
 		</div>
 	</div>
 
@@ -172,7 +170,7 @@
 			</div>
 		</div>
 		<div>
-			<p>Contents Copyright 2015 Kelly Sealy
+			<p>Contents Copyright 2017 Kelly Sealy
 				<br>Website by Don Sealy</p>
 		</div>
 	</footer>
