Added a bunch of new art.

--- a/index.html
+++ b/index.html
@@ -105,16 +105,48 @@
 				<div class='col-md-4'>
 					<h3>Painting</h3>
 					<figure class="thumbnail">
-						<a href="img/image1.png" title="image1" data-gallery><img src="img/image1.png" alt="image1"></a>
-						<figcaption>Image 1</figcaption>
+						<a href="img/FullSizeRender.jpg" title="Acrylic on Marble" data-gallery><img src="img/FullSizeRender.jpg" alt="Acrylic On Marble"></a>
+						<figcaption>Acrylic on Marble</figcaption>
 					</figure>
 					<figure class="thumbnail">
-						<a href="img/image2.png" title="image2" data-gallery><img src="img/image2.png" alt="image2"></a>
-						<figcaption>Image 2</figcaption>
+						<a href="img/IMG_0106.jpg" title="AcrylicOnCanvas" data-gallery><img src="img/IMG_0106.jpg" alt="Acrylic On Canvas"></a>
+						<figcaption>Acrylic on Canvas</figcaption>
 					</figure>
 					<figure class="thumbnail">
-						<a href="img/image3.png" title="image3" data-gallery><img src="img/image3.png" alt="image3"></a>
-						<figcaption>Image 3</figcaption>
+						<a href="img/IMG_0108.jpg" title="AcrylicOnCanvas" data-gallery><img src="img/IMG_0108.jpg" alt="Acrylic On Canvas"></a>
+						<figcaption>Acrylic On Canvas</figcaption>
+					</figure>
+					<figure class="thumbnail">
+						<a href="img/IMG_0109.jpg" title="AcrylicOnCanvas" data-gallery><img src="img/IMG_0109.jpg" alt="Acrylic On Canvas"></a>
+						<figcaption>Acrylic On Canvas</figcaption>
+					</figure>
+					<figure class="thumbnail">
+						<a href="img/IMG_0112.jpg" title="AcrylicOnCanvas" data-gallery><img src="img/IMG_0112.jpg" alt="Acrylic On Canvas"></a>
+						<figcaption>Acrylic On Canvas</figcaption>
+					</figure>
+					<figure class="thumbnail">
+						<a href="img/IMG_0115.jpg" title="AcrylicOnCanvas" data-gallery><img src="img/IMG_0115.jpg" alt="Acrylic On Canvas"></a>
+						<figcaption>Acrylic On Canvas</figcaption>
+					</figure>
+					<figure class="thumbnail">
+						<a href="img/IMG_0117.jpg" title="AcrylicOnCanvas" data-gallery><img src="img/IMG_0117.jpg" alt="Acrylic On Canvas"></a>
+						<figcaption>Acrylic On Canvas</figcaption>
+					</figure>
+					<figure class="thumbnail">
+						<a href="img/IMG_0119.jpg" title="AcrylicOnCanvas" data-gallery><img src="img/IMG_0119.jpg" alt="Acrylic On Canvas"></a>
+						<figcaption>Acrylic On Canvas</figcaption>
+					</figure>
+					<figure class="thumbnail">
+						<a href="img/IMG_0122.jpg" title="AcrylicOnCanvas" data-gallery><img src="img/IMG_0122.jpg" alt="Acrylic On Canvas"></a>
+						<figcaption>Acrylic On Canvas</figcaption>
+					</figure>
+					<figure class="thumbnail">
+						<a href="img/IMG_0124.jpg" title="AcrylicOnCanvas" data-gallery><img src="img/IMG_0124.jpg" alt="Acrylic On Canvas"></a>
+						<figcaption>Acrylic On Canvas</figcaption>
+					</figure>
+					<figure class="thumbnail">
+						<a href="img/IMG_0130.jpg" title="AcrylicOnCanvas" data-gallery><img src="img/IMG_0130.jpg" alt="Acrylic On Canvas"></a>
+						<figcaption>Acrylic On Canvas</figcaption>
 					</figure>
 				</div>
 
@@ -122,33 +154,41 @@
 				<div class='col-md-4'>
 					<h3>Drawing</h3>
 					<figure class="thumbnail">
-						<a href="img/image4.jpg" title="image4" data-gallery><img src="img/image4.jpg" alt="image4"></a>
-						<figcaption>Image 4</figcaption>
+						<a href="img/IMG_0014.JPG" title="Pastel" data-gallery><img src="img/IMG_0014.JPG" alt="Pastel"></a>
+						<figcaption>Pastel</figcaption>
 					</figure>
 					<figure class="thumbnail">
-						<a href="img/image5.jpg" title="image5" data-gallery><img src="img/image5.jpg" alt="image5"></a>
-						<figcaption>Image 5</figcaption>
+						<a href="img/IMG_0015.JPG" title="Mixed" data-gallery><img src="img/IMG_0015.JPG" alt="Mixed"></a>
+						<figcaption>Mixed Medium</figcaption>
 					</figure>
 					<figure class="thumbnail">
-						<a href="img/image6.jpg" title="image6" data-gallery><img src="img/image6.jpg" alt="image6"></a>
-						<figcaption>Image 6</figcaption>
+						<a href="img/IMG_0016.JPG" title="Pastel" data-gallery><img src="img/IMG_0016.JPG" alt="Pastel"></a>
+						<figcaption>Pastel</figcaption>
+					</figure>
+					<figure class="thumbnail">
+						<a href="img/IMG_0091.jpg" title="Pastel" data-gallery><img src="img/IMG_0091.jpg" alt="Pastel"></a>
+						<figcaption>Pastel</figcaption>
+					</figure>
+					<figure class="thumbnail">
+						<a href="img/IMG_0093.jpg" title="Charcoal" data-gallery><img src="img/IMG_0093.jpg" alt="Charcoal"></a>
+						<figcaption>Charcoal</figcaption>
+					</figure>
+					<figure class="thumbnail">
+						<a href="img/IMG_0094.jpg" title="Charcoal" data-gallery><img src="img/IMG_0094.jpg" alt="Charcoal"></a>
+						<figcaption>Charcoal</figcaption>
+					</figure>
+					<figure class="thumbnail">
+						<a href="img/IMG_0097.jpg" title="Pastel" data-gallery><img src="img/IMG_0097.jpg" alt="Pastel"></a>
+						<figcaption>Pastel</figcaption>
 					</figure>
 				</div>
 
 				<!-- Third Column -->
 				<div class='col-md-4'>
-					<h3>Scratchboard</h3>
+					<h3>Other</h3>
 					<figure class="thumbnail">
-						<a href="img/image7.jpg" title="image7" data-gallery><img src="img/image7.jpg" alt="image7"></a>
-						<figcaption>Image 7</figcaption>
-					</figure>
-					<figure class="thumbnail">
-						<a href="img/image8.png" title="image8" data-gallery><img src="img/image8.png" alt="image8"></a>
-						<figcaption>Image 8</figcaption>
-					</figure>
-					<figure class="thumbnail">
-						<a href="img/image9.png" title="image9" data-gallery><img src="img/image9.png" alt="image9"></a>
-						<figcaption>Image 9</figcaption>
+						<a href="img/IMG_0018.jpg" title="Scratchboard" data-gallery><img src="img/IMG_0018.jpg" alt="Scratchboard"></a>
+						<figcaption>Scratchboard</figcaption>
 					</figure>
 				</div>
 
