removed underscores from image names.

--- a/index.html
+++ b/index.html
@@ -109,43 +109,43 @@
 						<figcaption>Acrylic on Marble</figcaption>
 					</figure>
 					<figure class="thumbnail">
-						<a href="img/IMG_0106.jpg" title="AcrylicOnCanvas" data-gallery><img src="img/IMG_0106.jpg" alt="Acrylic On Canvas"></a>
+						<a href="img/IMG0106.jpg" title="AcrylicOnCanvas" data-gallery><img src="img/IMG0106.jpg" alt="Acrylic On Canvas"></a>
 						<figcaption>Acrylic on Canvas</figcaption>
 					</figure>
 					<figure class="thumbnail">
-						<a href="img/IMG_0108.jpg" title="AcrylicOnCanvas" data-gallery><img src="img/IMG_0108.jpg" alt="Acrylic On Canvas"></a>
+						<a href="img/IMG0108.jpg" title="AcrylicOnCanvas" data-gallery><img src="img/IMG0108.jpg" alt="Acrylic On Canvas"></a>
 						<figcaption>Acrylic On Canvas</figcaption>
 					</figure>
 					<figure class="thumbnail">
-						<a href="img/IMG_0109.jpg" title="AcrylicOnCanvas" data-gallery><img src="img/IMG_0109.jpg" alt="Acrylic On Canvas"></a>
+						<a href="img/IMG0109.jpg" title="AcrylicOnCanvas" data-gallery><img src="img/IMG0109.jpg" alt="Acrylic On Canvas"></a>
 						<figcaption>Acrylic On Canvas</figcaption>
 					</figure>
 					<figure class="thumbnail">
-						<a href="img/IMG_0112.jpg" title="AcrylicOnCanvas" data-gallery><img src="img/IMG_0112.jpg" alt="Acrylic On Canvas"></a>
+						<a href="img/IMG0112.jpg" title="AcrylicOnCanvas" data-gallery><img src="img/IMG0112.jpg" alt="Acrylic On Canvas"></a>
 						<figcaption>Acrylic On Canvas</figcaption>
 					</figure>
 					<figure class="thumbnail">
-						<a href="img/IMG_0115.jpg" title="AcrylicOnCanvas" data-gallery><img src="img/IMG_0115.jpg" alt="Acrylic On Canvas"></a>
+						<a href="img/IMG0115.jpg" title="AcrylicOnCanvas" data-gallery><img src="img/IMG0115.jpg" alt="Acrylic On Canvas"></a>
 						<figcaption>Acrylic On Canvas</figcaption>
 					</figure>
 					<figure class="thumbnail">
-						<a href="img/IMG_0117.jpg" title="AcrylicOnCanvas" data-gallery><img src="img/IMG_0117.jpg" alt="Acrylic On Canvas"></a>
+						<a href="img/IMG0117.jpg" title="AcrylicOnCanvas" data-gallery><img src="img/IMG0117.jpg" alt="Acrylic On Canvas"></a>
 						<figcaption>Acrylic On Canvas</figcaption>
 					</figure>
 					<figure class="thumbnail">
-						<a href="img/IMG_0119.jpg" title="AcrylicOnCanvas" data-gallery><img src="img/IMG_0119.jpg" alt="Acrylic On Canvas"></a>
+						<a href="img/IMG0119.jpg" title="AcrylicOnCanvas" data-gallery><img src="img/IMG0119.jpg" alt="Acrylic On Canvas"></a>
 						<figcaption>Acrylic On Canvas</figcaption>
 					</figure>
 					<figure class="thumbnail">
-						<a href="img/IMG_0122.jpg" title="AcrylicOnCanvas" data-gallery><img src="img/IMG_0122.jpg" alt="Acrylic On Canvas"></a>
+						<a href="img/IMG0122.jpg" title="AcrylicOnCanvas" data-gallery><img src="img/IMG0122.jpg" alt="Acrylic On Canvas"></a>
 						<figcaption>Acrylic On Canvas</figcaption>
 					</figure>
 					<figure class="thumbnail">
-						<a href="img/IMG_0124.jpg" title="AcrylicOnCanvas" data-gallery><img src="img/IMG_0124.jpg" alt="Acrylic On Canvas"></a>
+						<a href="img/IMG0124.jpg" title="AcrylicOnCanvas" data-gallery><img src="img/IMG0124.jpg" alt="Acrylic On Canvas"></a>
 						<figcaption>Acrylic On Canvas</figcaption>
 					</figure>
 					<figure class="thumbnail">
-						<a href="img/IMG_0130.jpg" title="AcrylicOnCanvas" data-gallery><img src="img/IMG_0130.jpg" alt="Acrylic On Canvas"></a>
+						<a href="img/IMG0130.jpg" title="AcrylicOnCanvas" data-gallery><img src="img/IMG0130.jpg" alt="Acrylic On Canvas"></a>
 						<figcaption>Acrylic On Canvas</figcaption>
 					</figure>
 				</div>
@@ -154,31 +154,31 @@
 				<div class='col-md-4'>
 					<h3>Drawing</h3>
 					<figure class="thumbnail">
-						<a href="img/IMG_0014.JPG" title="Pastel" data-gallery><img src="img/IMG_0014.JPG" alt="Pastel"></a>
+						<a href="img/IMG0014.JPG" title="Pastel" data-gallery><img src="img/IMG0014.JPG" alt="Pastel"></a>
 						<figcaption>Pastel</figcaption>
 					</figure>
 					<figure class="thumbnail">
-						<a href="img/IMG_0015.JPG" title="Mixed" data-gallery><img src="img/IMG_0015.JPG" alt="Mixed"></a>
+						<a href="img/IMG0015.JPG" title="Mixed" data-gallery><img src="img/IMG0015.JPG" alt="Mixed"></a>
 						<figcaption>Mixed Medium</figcaption>
 					</figure>
 					<figure class="thumbnail">
-						<a href="img/IMG_0016.JPG" title="Pastel" data-gallery><img src="img/IMG_0016.JPG" alt="Pastel"></a>
+						<a href="img/IMG0016.JPG" title="Pastel" data-gallery><img src="img/IMG0016.JPG" alt="Pastel"></a>
 						<figcaption>Pastel</figcaption>
 					</figure>
 					<figure class="thumbnail">
-						<a href="img/IMG_0091.jpg" title="Pastel" data-gallery><img src="img/IMG_0091.jpg" alt="Pastel"></a>
+						<a href="img/IMG0091.jpg" title="Pastel" data-gallery><img src="img/IMG0091.jpg" alt="Pastel"></a>
 						<figcaption>Pastel</figcaption>
 					</figure>
 					<figure class="thumbnail">
-						<a href="img/IMG_0093.jpg" title="Charcoal" data-gallery><img src="img/IMG_0093.jpg" alt="Charcoal"></a>
+						<a href="img/IMG0093.jpg" title="Charcoal" data-gallery><img src="img/IMG0093.jpg" alt="Charcoal"></a>
 						<figcaption>Charcoal</figcaption>
 					</figure>
 					<figure class="thumbnail">
-						<a href="img/IMG_0094.jpg" title="Charcoal" data-gallery><img src="img/IMG_0094.jpg" alt="Charcoal"></a>
+						<a href="img/IMG0094.jpg" title="Charcoal" data-gallery><img src="img/IMG0094.jpg" alt="Charcoal"></a>
 						<figcaption>Charcoal</figcaption>
 					</figure>
 					<figure class="thumbnail">
-						<a href="img/IMG_0097.jpg" title="Pastel" data-gallery><img src="img/IMG_0097.jpg" alt="Pastel"></a>
+						<a href="img/IMG0097.jpg" title="Pastel" data-gallery><img src="img/IMG0097.jpg" alt="Pastel"></a>
 						<figcaption>Pastel</figcaption>
 					</figure>
 				</div>
@@ -187,7 +187,7 @@
 				<div class='col-md-4'>
 					<h3>Other</h3>
 					<figure class="thumbnail">
-						<a href="img/IMG_0018.jpg" title="Scratchboard" data-gallery><img src="img/IMG_0018.jpg" alt="Scratchboard"></a>
+						<a href="img/IMG0018.jpg" title="Scratchboard" data-gallery><img src="img/IMG0018.jpg" alt="Scratchboard"></a>
 						<figcaption>Scratchboard</figcaption>
 					</figure>
 				</div>
