changed image extensions to lower case.

--- a/index.html
+++ b/index.html
@@ -154,15 +154,15 @@
 				<div class='col-md-4'>
 					<h3>Drawing</h3>
 					<figure class="thumbnail">
-						<a href="img/IMG0014.JPG" title="Pastel" data-gallery><img src="img/IMG0014.JPG" alt="Pastel"></a>
+						<a href="img/IMG0014.jpg" title="Pastel" data-gallery><img src="img/IMG0014.jpg" alt="Pastel"></a>
 						<figcaption>Pastel</figcaption>
 					</figure>
 					<figure class="thumbnail">
-						<a href="img/IMG0015.JPG" title="Mixed" data-gallery><img src="img/IMG0015.JPG" alt="Mixed"></a>
+						<a href="img/IMG0015.jpg" title="Mixed" data-gallery><img src="img/IMG0015.jpg" alt="Mixed"></a>
 						<figcaption>Mixed Medium</figcaption>
 					</figure>
 					<figure class="thumbnail">
-						<a href="img/IMG0016.JPG" title="Pastel" data-gallery><img src="img/IMG0016.JPG" alt="Pastel"></a>
+						<a href="img/IMG0016.jpg" title="Pastel" data-gallery><img src="img/IMG0016.jpg" alt="Pastel"></a>
 						<figcaption>Pastel</figcaption>
 					</figure>
 					<figure class="thumbnail">
