Added three new drawings.

--- a/index.html
+++ b/index.html
@@ -181,6 +181,18 @@
 						<a href="img/IMG0097.jpg" title="Pastel" data-gallery><img src="img/IMG0097.jpg" alt="Pastel"></a>
 						<figcaption>Pastel</figcaption>
 					</figure>
+					<figure class="thumbnail">
+						<a href="img/WP20141030-002jpg" title="Pastel" data-gallery><img src="img/WP20141030-002.jpg" alt="Pastel"></a>
+						<figcaption>Pastel</figcaption>
+					</figure>
+					<figure class="thumbnail">
+						<a href="img/WP_20150112-010.jpg" title="Pastel" data-gallery><img src="img/WP_20150112-010.jpg" alt="Pastel"></a>
+						<figcaption>Pastel</figcaption>
+					</figure>
+					<figure class="thumbnail">
+						<a href="img/WP_20141212-002.jpg" title="Pastel" data-gallery><img src="img/WP_20141212-002.jpg" alt="Pastel"></a>
+						<figcaption>Pastel</figcaption>
+					</figure>
 				</div>
 
 				<!-- Third Column -->
