Added a new piece.

--- a/index.html
+++ b/index.html
@@ -105,6 +105,10 @@
 				<div class='col-md-4'>
 					<h3>Painting</h3>
 					<figure class="thumbnail">
+						<a href="img/IMG_0136.jpg" title="AcrylicOnCanvas" data-gallery><img src="img/IMG_0136.jpg" alt="Acrylic On Canvas"></a>
+						<figcaption>Acrylic On Canvas</figcaption>
+					</figure>
+					<figure class="thumbnail">
 						<a href="img/FullSizeRender.jpg" title="Acrylic on Marble" data-gallery><img src="img/FullSizeRender.jpg" alt="Acrylic On Marble"></a>
 						<figcaption>Acrylic on Marble</figcaption>
 					</figure>
