Fixed a spelling error.

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 		<div class="container">
 			<div class="text-plate">
 				<h1>Kelly Sealy's Art Portfolio</h1>
-				<p>A collection of painting and drawings created by Kelly Sealy, an artist living in Portland, Oregon.</p>
+				<p>A collection of paintings and drawings created by Kelly Sealy, an artist living in Portland, Oregon.</p>
 			</div>
 			<div id="workButton" class="button">View Work</div>
 		</div>
