--- a/index.html
+++ b/index.html
@@ -152,6 +152,30 @@
 						<a href="img/IMG0130.jpg" title="AcrylicOnCanvas" data-gallery><img src="img/IMG0130.jpg" alt="Acrylic On Canvas"></a>
 						<figcaption>Acrylic On Canvas</figcaption>
 					</figure>
+					<figure class="thumbnail">
+						<a href="img/IMG_0164.jpg" title="AcrylicOnCanvas" data-gallery><img src="img/IMG_0164.jpg" alt="Acrylic On Canvas"></a>
+						<figcaption>Acrylic On Canvas</figcaption>
+					</figure>
+					<figure class="thumbnail">
+						<a href="img/IMG_0169.jpg" title="AcrylicOnCanvas" data-gallery><img src="img/IMG_0169.jpg" alt="Acrylic On Canvas"></a>
+						<figcaption>Acrylic On Canvas</figcaption>
+					</figure>
+					<figure class="thumbnail">
+						<a href="img/IMG_0173.JPG" title="AcrylicOnCanvas" data-gallery><img src="img/IMG_0173.JPG" alt="Acrylic On Canvas"></a>
+						<figcaption>Acrylic On Canvas</figcaption>
+					</figure>
+					<figure class="thumbnail">
+						<a href="img/IMG_0177.JPG" title="AcrylicOnCanvas" data-gallery><img src="img/IMG_0177.JPG" alt="Acrylic On Canvas"></a>
+						<figcaption>Acrylic On Canvas</figcaption>
+					</figure>
+					<figure class="thumbnail">
+						<a href="img/IMG_0181.JPG" title="AcrylicOnCanvas" data-gallery><img src="img/IMG_0181.JPG" alt="Acrylic On Canvas"></a>
+						<figcaption>Acrylic On Canvas</figcaption>
+					</figure>
+					<figure class="thumbnail">
+						<a href="img/IMG_0185.jpg" title="AcrylicOnCanvas" data-gallery><img src="img/IMG_0185.jpg" alt="Acrylic On Canvas"></a>
+						<figcaption>Acrylic On Canvas</figcaption>
+					</figure>
 				</div>
 
 				<!-- Second Column -->
