fixed and issue with file extension for some images

--- a/index.html
+++ b/index.html
@@ -161,11 +161,11 @@
 						<figcaption>Acrylic On Canvas</figcaption>
 					</figure>
 					<figure class="thumbnail">
-						<a href="img/IMG_0173.JPG" title="AcrylicOnCanvas" data-gallery><img src="img/IMG_0173.JPG" alt="Acrylic On Canvas"></a>
+						<a href="img/IMG_0173.jpg" title="AcrylicOnCanvas" data-gallery><img src="img/IMG_0173.JPG" alt="Acrylic On Canvas"></a>
 						<figcaption>Acrylic On Canvas</figcaption>
 					</figure>
 					<figure class="thumbnail">
-						<a href="img/IMG_0177.JPG" title="AcrylicOnCanvas" data-gallery><img src="img/IMG_0177.JPG" alt="Acrylic On Canvas"></a>
+						<a href="img/IMG_0177.jpg" title="AcrylicOnCanvas" data-gallery><img src="img/IMG_0177.JPG" alt="Acrylic On Canvas"></a>
 						<figcaption>Acrylic On Canvas</figcaption>
 					</figure>
 					<figure class="thumbnail">
