--- a/index.html
+++ b/index.html
@@ -161,15 +161,15 @@
 						<figcaption>Acrylic On Canvas</figcaption>
 					</figure>
 					<figure class="thumbnail">
-						<a href="img/IMG_0173.jpg" title="AcrylicOnCanvas" data-gallery><img src="img/IMG_0173.JPG" alt="Acrylic On Canvas"></a>
+						<a href="img/IMG_0173.jpg" title="AcrylicOnCanvas" data-gallery><img src="img/IMG_0173.jpg" alt="Acrylic On Canvas"></a>
 						<figcaption>Acrylic On Canvas</figcaption>
 					</figure>
 					<figure class="thumbnail">
-						<a href="img/IMG_0177.jpg" title="AcrylicOnCanvas" data-gallery><img src="img/IMG_0177.JPG" alt="Acrylic On Canvas"></a>
+						<a href="img/IMG_0177.jpg" title="AcrylicOnCanvas" data-gallery><img src="img/IMG_0177.jpg" alt="Acrylic On Canvas"></a>
 						<figcaption>Acrylic On Canvas</figcaption>
 					</figure>
 					<figure class="thumbnail">
-						<a href="img/IMG_0181.JPG" title="AcrylicOnCanvas" data-gallery><img src="img/IMG_0181.JPG" alt="Acrylic On Canvas"></a>
+						<a href="img/IMG_0181.jpg" title="AcrylicOnCanvas" data-gallery><img src="img/IMG_0181.jpg" alt="Acrylic On Canvas"></a>
 						<figcaption>Acrylic On Canvas</figcaption>
 					</figure>
 					<figure class="thumbnail">
